[package]
name = "ma-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = "0.11.0"
rand = "0.8.5"
strum = { version = "0.25.0", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4"] }
bracket-noise = "0.8.7"
image = "0.24.7"
axum = "0.6.20"
axum-server = "0.5.1"
tower-http = { version = "0.4.4", features = ["fs"] }